# dataset-manager

./: .gitignore  README.md  TESTING.md  pyproject.toml  setup.py
dataset_manager/: __init__.py  cli.py  core.py
scripts/: generate_checksum.sh  verify_checksum.sh
tests/: test_core.py
